# cookie

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  configure
examples/: count.rs  json.rs
src/: cookie.rs  lib.rs  parser.rs  response.rs
src/cookie/: mod.rs
src/parser/: mod.rs  test.rs
src/response/: headers.rs  mod.rs  test.rs
