[package]

name = "cookie"
version = "0.1.0"
authors = ["Zach Pomerantz <zmp@umich.edu>"]
keywords = ["iron", "web", "cookies"]

[lib]

name = "cookie"
path = "src/lib.rs"

[dependencies.iron]

git = "https://github.com/iron/iron.git"

[dependencies.rust-crypto]

git = "https://github.com/DaGenix/rust-crypto.git"

[dependencies.url]

git = "https://github.com/servo/rust-url.git"

[dev-dependencies.iron-test]

git = "https://github.com/reem/iron-test.git"
